src/styles/global.css
body {
  padding: 0;
  margin: 0;
  height: 100vh;
  background-color: black;
  font-family: as;
  font-size: 1.2em;
  overflow: hidden;
  color: white;
  word-break: break-all;
}

a:link {
  color: #00B9F4;
  text-decoration: none;
}

a:visited {
  color: #00B9F4;
}

a:hover {
  color: #00B9F4;
  filter: blur(3px);
}

a:active {
  color: #00B9F4;
  filter: blur(3px);
}

svg {
  overflow: visible;
}

@font-face {
  font-family: as;
  font-weight: 90;
  font-style: normal;
  src: url("../fonts/AUTHENTICSans-90.woff2") format("woff2");
  font-display: swap;
}

.background-image {
  position: absolute;
  height: 100vh;
}

.text {
  z-index: 3;
  position: absolute;
}

.shapes {
  z-index: 2;
  position: relative;
  top: 10em;
}

.st01 {
  animation: asd 55s linear infinite;
  transform-origin: 70% 70%;
}

.st1 {
  animation: asd 45s linear infinite;
  transform-origin: 60% 80%;
}

.st2 {
  animation: asd 35s linear infinite;
  transform-origin: 50% 70%;
}

.st3 {
  animation: asd 50s linear infinite;
  transform-origin: 40% 80%;
}

.st4 {
  animation: asd 40s linear infinite;
  transform-origin: 50% 80%;
}

@keyframes asd {
  0% {
    transform: scaleX(1) scaleY(1) rotate(0);
  }
  50% {
    transform: scaleX(-2) scaleY(2) rotate(10deg);
  }
  100% {
    transform: scaleX(1) scaleY(1) rotate(0);
  }
}

